# var

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  release.yml
cmake/: var-config.cmake.in
example/: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  var_test.cpp
